--- a/MUGEN_Fighting_Sephiroth/menu.html
+++ b/MUGEN_Fighting_Sephiroth/menu.html
@@ -24,16 +24,8 @@
 					<hr>
 				</td>
 			</tr>
-			<tr><td colspan="2"><b><a href="charamake/menu.html" target="b"><div class="bottun-hover">キャラメイク</div></a></td></tr>
+			<tr><td colspan="2"><b><div class="bottun-hover">キャラメイク</div></a></td></tr>
 			<tr><td colspan="2"><b><a href="rule/menu.html" target="b"><div class="bottun-hover">基本ルール</div></a></td></tr>
-			<tr><td colspan="2"><b><a href="charamake/menu.html" target="b"><div class="bottun-hover">キャラメイク</div></a></td></tr>
-		</table>
-	</td>
-</tr>
-<tr valign="top">
-	<td>
-		<table border="0" cellspacing="5" cellpadding="5" width="100%">
-			<tr><td colspan="2"><b><a href="https://w.atwiki.jp/kanitrpg01/pages/1.html" target="a"><div class="bottun-hover">カニスレＴＲＰＧ部＠wikiへ</div></a></td></tr>
 		</table>
 	</td>
 </tr>
