--- a/MUGEN_Fighting_Sephiroth/rule/menu.html
+++ b/MUGEN_Fighting_Sephiroth/rule/menu.html
@@ -29,7 +29,7 @@
 			</tr>
 			<tr>
 				<td colspan="2">
-					<b><a href="01.html" target="c"><div class="bottun-hover">戦闘ルール</div></a>
+					<b><a href="battle.html" target="c"><div class="bottun-hover">戦闘ルール</div></a>
 				</td>
 			</tr>
 		</table>
