--- a/MUGEN_Fighting_Sephiroth/rule/battle.html
+++ b/MUGEN_Fighting_Sephiroth/rule/battle.html
@@ -47,8 +47,11 @@
 			<h3><b>●臨戦</b></h3>
 			<p>
 				拳や武器、あるいは特別な異能を構え、攻防に備えます。<br>
-				任意の枚数だけ山札からカードを引いて自らの【手札】とし、【引いた数×２】点だけ行動力を消費します。<br>
-				山札にカードがない場合、【臨戦】は宣言できません。
+				任意の枚数だけ山札からカードを引いて自らの【手札】とし、【引いた数×２】点だけ行動力を消費します。
+			</p>
+			<p>
+				手札が６枚以上の時、【臨戦】は宣言できません。<br>
+				また、山札のカードが０枚を下回るような宣言もできません。
 			</p>
 		</td>
 	</tr>
