--- a/MUGEN_Fighting_Sephiroth/rule/battle.html
+++ b/MUGEN_Fighting_Sephiroth/rule/battle.html
@@ -68,12 +68,19 @@
 				①：攻撃側は好きな手札を１枚、【攻撃】ゾーンへ裏向きに出します。<br>
 				②：防御側は好きな手札を１枚、【防御】ゾーンへ表向きに出します。<br>
 				　　この際、カードを出さないことも可能です。<br>
-				②：【攻撃ゾーンのカード】と【防御・ダメージゾーンのそれぞれ一番上のカード】を比較します。<br>
+				③：【攻撃ゾーンのカード】と【防御・ダメージゾーンのそれぞれ一番上のカード】を比較します。<br>
 				　　攻撃側の数値の方が小さい、または防御側がカードを出していない場合、攻撃側カードを【ダメージ】ゾーンに置き、攻防を終了するか①に戻ります。<br>
 				　　防御側の数値の方が小さい、または数値が同じであった場合、攻防を終了します。<br>
-				③：攻防が終了した時点で、防御側は【ダメージ】ゾーンカードの数値の合計分ＨＰダメージを受けます。<br>
+				④：攻防が終了した時点で、防御側は【ダメージ】ゾーンカードの数値の合計分ＨＰダメージを受けます。<br>
 				　　その後、【攻撃】【防御】【ダメージ】ゾーンのカードを全て【捨て札】に置きます。
 			</p>
+			<div style="background:rgba(0,0,0,0.7);" width="90%" align="center" border="0">
+			▼喰らい抜け
+			<p>
+				攻防でダメージを受けた時、そのダメージの２倍の数字を持つカードを手札から捨てることで【喰らい抜け】を宣言できます。<br>
+				喰らい抜けを行った場合、攻撃側はその攻防を続けることができません。
+			</p>
+			</div>
 		</td>
 	</tr>
 	<tr>
