--- a/MUGEN_Fighting_Sephiroth/rule/battle.html
+++ b/MUGEN_Fighting_Sephiroth/rule/battle.html
@@ -79,7 +79,7 @@
 			<div style="background:rgba(0,0,0,0.7);" width="90%" align="left" border="0">
 			▼喰らい抜け
 			<p>
-				攻防でダメージを受けた時、そのダメージの２倍の数字を持つカードを手札から捨てることで【喰らい抜け】を宣言できます。<br>
+				攻防でダメージを受けた時、そのダメージの２倍の威力を持つカードを手札から捨てて【喰らい抜け】を宣言できます。<br>
 				喰らい抜けを行った場合、攻撃側はその攻防を続けることができません。
 			</p>
 			</div>
